# fileforge

./: .gitignore  Cargo.toml  flake.nix  rust-toolchain.toml  rustc-ice-2024-05-06T21_01_54-39604.txt  rustc-ice-2024-05-06T21_01_54-48544.txt  rustfmt.toml
fileforge/: Cargo.toml
fileforge-byml/: Cargo.toml
fileforge-byml/src/: lib.rs
fileforge-byml/src/managed/: binary_data.rs  dictionary.rs  hash_array.rs  heterogeneous_array.rs  homogeneous_array.rs  mod.rs
fileforge-byml/src/unmanaged/: mod.rs
fileforge-byml/src/unmanaged/error/: get_header.rs  get_root_node.rs  get_string_table.rs  header_root_node_data_out_of_bounds.rs  load.rs  mod.rs
fileforge-byml/src/unmanaged/header/: error.rs  mod.rs
fileforge-byml/src/unmanaged/node/: dictionary.rs  dictionary_iterator.rs  mod.rs  trait.rs
fileforge-byml/src/unmanaged/string_table/: mod.rs
fileforge-byml/src/util/: binary_search.rs
fileforge-lib/: Cargo.toml
fileforge-lib/src/: lib.rs  storybook.rs
fileforge-lib/src/binary_reader/: mod.rs  subfork.rs
fileforge-lib/src/binary_reader/error/: exhausted.rs  set_primitive.rs  static_subfork.rs
fileforge-lib/src/binary_reader/mutable/: mod.rs
fileforge-lib/src/binary_reader/primitive/: bool.rs  numeric.rs  slice.rs
fileforge-lib/src/binary_reader/readable/: mod.rs
fileforge-lib/src/binary_reader/writable/: mod.rs
fileforge-lib/src/diagnostic/: mod.rs  value.rs
fileforge-lib/src/diagnostic/node/: branch.rs  mod.rs  name.rs  reference.rs  tagged_reference.rs
fileforge-lib/src/diagnostic/pool/: entry.rs  field.rs  mod.rs
fileforge-lib/src/error/: context.rs  mod.rs
fileforge-lib/src/error/render/: mod.rs  position.rs  session.rs
fileforge-lib/src/error/report/: kind.rs  location.rs  mod.rs
fileforge-lib/src/object/: mod.rs
fileforge-lib/src/object/endianness/: error.rs  mod.rs
fileforge-lib/src/object/magic/: error.rs  mod.rs
fileforge-lib/src/object/nintendo/: mod.rs
fileforge-lib/src/provider/: hint.rs  mod.rs  out_of_bounds.rs  ref.rs  trait.rs
fileforge-lib/src/provider/builtin/: mod.rs  rust_mut_slice.rs  rust_slice.rs
fileforge-lib/src/provider/builtins/: mod.rs
fileforge-lib/src/provider/error/: always.rs  mod.rs  never.rs  out_of_bounds.rs  provider_mutate.rs  provider_read.rs  provider_resize.rs  provider_slice.rs  read_error.rs  slice_error.rs  user_mutate.rs  user_read.rs  user_resize.rs  user_slice.rs  write_error.rs
fileforge-lib/src/provider/slice/: dynamic.rs  fixed.rs  mod.rs
fileforge-lib/src/reader/: diagnostic_store.rs  endianness.rs  mod.rs  subfork.rs
fileforge-lib/src/reader/error/: domain.rs  dynamic_subfork.rs  exhausted.rs  expect_primitive.rs  get_primitive.rs  mod.rs  out_of_bounds.rs  parse.rs  parse_primitive.rs  read_bytes.rs  read_out_of_bounds.rs  result.rs  rewind.rs  seek.rs  seek_out_of_bounds.rs  set_primitive.rs  skip.rs  static_subfork.rs  subfork.rs  underlying_provider_error.rs  underlying_provider_read.rs  underlying_provider_stat.rs
fileforge-lib/src/reader/mutable/: mod.rs
fileforge-lib/src/reader/primitive/: bool.rs  mod.rs  numeric.rs  slice.rs  unit.rs
fileforge-lib/src/reader/readable/: mod.rs
fileforge-lib/src/reader/trait/: mod.rs  none_sized_argument.rs  primitive.rs  readable.rs
fileforge-lib/src/reader/writable/: mod.rs
fileforge-lib/src/stream/: collectable.rs  mod.rs
fileforge-lib/src/stream/builtin/: provider.rs
fileforge-lib/src/stream/error/: mod.rs  stream_exhausted.rs  stream_mutate.rs  stream_overwrite.rs  stream_partition.rs  stream_read.rs  stream_restore.rs  stream_rewind.rs  stream_seek.rs  stream_seek_out_of_bounds.rs  stream_skip.rs  stream_write.rs  user_mutate.rs  user_overwrite.rs  user_partition.rs  user_read.rs  user_rewind.rs  user_seek.rs  user_skip.rs  user_write.rs
fileforge-nintendo/: Cargo.toml
fileforge-nintendo/src/: lib.rs
fileforge-nintendo/src/byml/: mod.rs  readable.rs
fileforge-nintendo/src/byml/header/: mod.rs  readable.rs
fileforge-nintendo/src/byml/node/: discriminant.rs  mod.rs
fileforge-nintendo/src/sead/: mod.rs
fileforge-nintendo/src/sead/sarc/: mod.rs  readable.rs
fileforge-nintendo/src/sead/yaz0/: mod.rs  readable.rs  store.rs
fileforge-nintendo/src/yaz0/: chunk.rs  decode.rs  header.rs  mod.rs  readable.rs
fileforge-nintendo/src/yaz0/error/: construct.rs  decode.rs  decompress.rs  mod.rs
fileforge-nintendo/src/yaz0/header/: mod.rs  mutable.rs  readable.rs
fileforge-nintendo/src/yaz0/state/: mod.rs
fileforge-test/: Cargo.toml  post.bin.yaz0  proj.hexproj
fileforge-test/binaries/: Bed.byml  Bed.byml.yaz0  SkyWorldHomeStageMap.szs  real.byml  simple.byml
fileforge-test/src/: main.rs
fileforge/src/: control_flow.rs  lib.rs  storybook.rs
fileforge/src/binary_reader/: diagnostic_store.rs  endianness.rs  mod.rs  partition.rs  snapshot.rs
fileforge/src/binary_reader/error/: common.rs  dynamic_subfork.rs  exhausted.rs  get_primitive.rs  mod.rs  primitive_name_annotation.rs  (+4 more)
fileforge/src/diagnostic/: value.rs
fileforge/src/encoding/: mod.rs
fileforge/src/error/: context.rs  mod.rs
fileforge/src/provider/: hint.rs
fileforge/src/stream/: collectable.rs  mod.rs
(+248 files in other folders)
