[package]
name = "fileforge-byml"
version = "0.1.0"
edition = "2021"

[dependencies]
fileforge-lib = { version = "0.1.0", path = "../fileforge-lib", registry = "eepy" }
fileforge-macros = { path = "../fileforge-macros", registry = "eepy" }
fileforge-std = { path = "../fileforge-std", registry = "eepy" }
intx = "0.1.0"

[features]
default = ["alloc"]
alloc = ["fileforge-lib/alloc"]