[package]
name = "fileforge-byml"
version = "0.1.2"
edition = "2021"

[dependencies]
fileforge-lib = { version = "0.1.2", path = "../fileforge-lib", registry = "eepy", default-features = false }
fileforge-macros = { version = "0.1.0", path = "../fileforge-macros", registry = "eepy" }
fileforge-std = { version = "0.1.1", path = "../fileforge-std", registry = "eepy" }
intx = "0.1.0"

[features]
default = ["alloc"]
alloc = ["fileforge-lib/alloc"]
