[package]
name = "fileforge-nintendo"
version = "0.1.3"
edition = "2021"

[dependencies]
fileforge-lib = { path = "../fileforge-lib", default-features = false }
fileforge-macros = { path = "../fileforge-macros" }
fileforge-std = { path = "../fileforge-std", default-features = false }
heapless = "0.8.0"
intx = "0.1.0"

[features]
default = ["alloc"]
alloc = ["fileforge-lib/alloc"]
