[package]
name = "fileforge-nintendo"
version = "0.1.3"
edition = "2021"

[dependencies]
enum-as-inner = "0.6.1"
fileforge = { path = "../fileforge", default-features = false }
fileforge-macros = { path = "../fileforge-macros" }
fileforge-std = { path = "../fileforge-std", default-features = false }
heapless = "0.9.1"
intx = "0.1.0"
strum = { version = "0.27.2", features = ["phf", "derive", "strum_macros"] }

[features]
default = ["alloc", "std"]
alloc = ["fileforge/alloc"]
std = ["fileforge/std"]

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
