[package]
name = "fileforge-test"
version = "0.1.0"
edition = "2021"

[dependencies]
fileforge-lib = { path = "../fileforge-lib", features = ["story"] }
fileforge-macros = { path = "../fileforge-macros" }
# fileforge-std = { path = "../fileforge-std" }
fileforge-nintendo = { path = "../fileforge-nintendo" }
heapless = "0.8.0"
tokio = { version = "1.43.0", features = ["full", "macros"] }
yaz0  = "0.3.0"